# ToolBridge-MCP

./: .gitignore  LICENSE  README.md  generate_manifest.py  pyproject.toml  requirements.txt  run_server.py
manifests/: AD-LinuxInventory.json  AD-SecurityAudit.json  AD-UserLifecycle.json  Admin-MorningBrief.json  Admin-UserLookup.json  Certificate-LifecycleMonitor.json  EntraID-SecurityAudit.json  Exchange-MigrationAssessment.json  GPO-HealthAudit.json  GitHub-RepoWatch.json  ITSM-Insights.json  Infra-ChangeTracker.json  Infra-HealthDashboard.json  Infra-LivingDoc.json  Infra-RunbookEngine.json  Intune-ComplianceReport.json  LocalPolicy-ToGPO.json  M365-LicenseOptimizer.json  M365-SecurityBaseline.json  NTFS-PermissionAudit.json  ServiceAccount-Audit.json  VM-AutoTagger.json
tests/: test_toolbridge.py
toolbridge/: __init__.py  executor.py  manifest.py  server.py
toolbridge/adapters/: __init__.py  powershell.py
