[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "toolbridge-mcp"
version = "1.0.0"
description = "Universal MCP server that exposes tools from any language — PowerShell, Python, Bash, Node, any CLI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Larry Roberts"}]
keywords = ["mcp", "model-context-protocol", "powershell", "automation", "ai", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
toolbridge-server = "toolbridge.server:main"
toolbridge-generate = "generate_manifest:main"

[project.urls]
Homepage = "https://github.com/larro1991/ToolBridge-MCP"
Repository = "https://github.com/larro1991/ToolBridge-MCP"
